# CTU_2_KUI

./: .gitmodules  Ethics_confidentiality 1.docx  Ethics_confidentiality 2.docx
1_HW/: .gitignore  A_star.py  agent.py  example_search.py
MDPs/: mdp_agent.py
MDPs/kuimaze2/: search.py
RL/: pyproject.toml  rl_agent.py
RL/kuimaze2/: map.py  rendering.py
kui-reversi/: README.md  another_player.py  fine_player.py  headless_reversi_creator.py  player.py  pyproject.toml  random_player.py  reversi_creator.py  reversi_view.py  test_player.py
recog/: knn.py  naive_bayes.py
recog/recogHW/: knn.py  naive_bayes.py
