[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kuimaze"
version = "0.1.0"
authors = [{ name = "Petr Pošík", email = "petr.posik@cvut.cz" }]
description = "Maze environments (shortest path, MDP, RL) for educational purposes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest",
    "pillow",
    # 'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools]
packages = ["kuimaze2"]  # List your packages here

# ... other project metadata fields as listed in:
#     https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
